--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <img src="./assets/img/logo.svg" alt="">
+        <div class="header--title-container">
+            <h1>La próxiam revolución en el intercambio de criptomnedas</h1>
+            <p>
+                Batatabit te ayuda a navegar entre los diferentes precios y tendencias
+            </p>
+            <a class="header--button" href="">Conoce nuestros planes <span>i</span></a>
+        </div>
+    </header>
     <main>
         <section></section>
         <section></section>
