--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@300;500&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    
+
     <title>Document</title>
 </head>
 
@@ -18,11 +20,20 @@
     <header>
         <img src="./assets/img/logo.svg" alt="">
         <div class="header--title-container">
-            <h1>La próxiam revolución en el intercambio de criptomnedas</h1>
+            <h1>La próxiam revolución en el intercambio de criptomnedas.</h1>
             <p>
                 Batatabit te ayuda a navegar entre los diferentes precios y tendencias
             </p>
-            <a class="header--button" href="">Conoce nuestros planes <span>i</span></a>
+            <a class="header--button" href="">
+                Conoce nuestros planes
+                <span>
+                    <svg width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M1.91 0.589966L6.5 5.16997L11.09 0.589966L12.5 1.99997L6.5 7.99997L0.5 1.99997L1.91 0.589966Z"
+                            fill="#201E1C" />
+                    </svg>
+                </span>
+            </a>
         </div>
     </header>
     <main>
