--- a/index.html
+++ b/index.html
@@ -37,8 +37,92 @@
         </div>
     </header>
     <main>
-        <section></section>
-        <section></section>
+        <section class="main-exchange-container">
+            <div class="backgroundImg"></div>
+            <div class="main-exchange-container--title">
+                <h2>Visibilizamos todas las tazas de cambio</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>
+            </div>
+            <section class="main-tables-container">
+                <div class="main-currency-table">
+                    <p class="currency-table--tittle">Monedas</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitcoin</td>
+                                <td class="table__top-right table__right">$ 1.96<span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ethereum</td>
+                                <td class="table__right">$ 0.07<span class="up"></span></td>
+                            </tr>
+                            <tr>
+                                <td>Ripple</td>
+                                <td class="table__right">$ 2.15<span class="down"></span></td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Stellar</td>
+                                <td class="table__bottom-right table__right">$ 4.96<span class="down"></span></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="currency-table--date">
+                        <p> <b>Actualizado:</b> 19 de Julio 23:45</p>
+                    </div>
+                </div>
+                <div class="main-currency-table">
+                    <p class="com">Comisiones</p>
+                    <div class="currency-table--container">
+                        <table>
+                            <tr>
+                                <td class="table__top-left">Bitrade</td>
+                                <td class="table__top-right table__right">$ 1.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$ 0.07</td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$ 2.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$ 4.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="date">
+                        <p> <b>Actualizado:</b> 19 de Julio 23:48</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section class="section">
+            <img src="" alt="">
+            <h2>Creamos un producto sin comparación.</h2>
+            <p>Confiable y diseñado para su uso diario.</p>
+            <div>
+                <img src="" alt="">
+                <h3>Tiempo real</h3>
+                <p>Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Tiempo real</h3>
+                <p>Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Tiempo real</h3>
+                <p>No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Tiempo real</h3>
+                <p>Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
+            </div>
+        </section>
         <section></section>
         <section></section>
     </main>
